--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+    				<groupId>org.pitest</groupId>
+    				<artifactId>pitest-maven</artifactId>
+    				<version>1.6.2</version>
+                                <dependencies>
+                                 <dependency>
+                                   <groupId>org.pitest</groupId>
+                                   <artifactId>pitest-junit5-plugin</artifactId>
+                                   <version>0.12</version>
+                                 </dependency>
+                                </dependencies>
+ 			</plugin>
 		</plugins>
 	</build>
 
